# strawberry_jam

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
dummy_app/: strawberry_jam
dummy_app/dummy_app/: asgi.py  settings.py  urls.py  wsgi.py
dummy_app/graph_api/: models.py
dummy_app/graph_api/gql/: schema.py  urls.py
dummy_app/graph_api/gql/filters/: author_filter.py  book_filter.py  book_info_filter.py  shelf_filter.py
dummy_app/graph_api/gql/forms/: author_create_form.py  author_update_form.py  book_create_form.py  book_info_create_form.py  book_info_update_form.py  book_update_form.py  shelf_create_form.py  shelf_update_form.py
dummy_app/graph_api/gql/inputs/: author_create_input.py  author_update_input.py  book_create_input.py  book_info_create_input.py  book_info_update_input.py  book_update_input.py  shelf_create_input.py  shelf_update_input.py
dummy_app/graph_api/gql/mutations/: author_mutation.py  book_info_mutation.py  book_mutation.py  shelf_mutation.py
dummy_app/graph_api/gql/nodes/: author_node.py  book_info_node.py  (+2 more)
dummy_app/graph_api/migrations/: 0001_initial.py
strawberry_jam/: conventions.py  forms.py  jam.py  mutations.py  node.py  queryset.py  utils.py
strawberry_jam/chunks/django_relay/: base.py  create_form.py  create_input.py  filter.py  mutation.py  node.py  order.py  query.py  update_form.py  update_input.py  workflow.py
strawberry_jam/codegen/: arguments.py  defaults.py  utils.py  workflow.py
strawberry_jam/management/commands/: make-jam.py  straw-models.py
(+36 files in other folders)
